Add automatic Grafana dashboard generator

--- a/vigilant/tutorial.ipynb
+++ b/vigilant/tutorial.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "from vigilant import Monitor\n",
-    "m = Monitor(period=1)\n",
+    "m = Monitor(period=1, measurement='test', dashboard = 'Vigilant')\n",
     "m.watch(read_voltage)\n",
     "m.start()"
    ]
@@ -43,7 +43,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The periodic acquisiton uses Python's sched module for event scheduling to avoid accumulated drifts. For example, if your check() method takes 50 ms to return and you call it in a loop with a 1 s delay, the true time between checks will actually be 1.05 s. Using the scheduler allows drift-free checking; however, you should make sure that the check() call always returns in a time shorter than your chosen period!"
+    "The periodic acquisiton uses Python's sched module for event scheduling to avoid accumulated drifts. For example, if your check() method takes 50 ms to return and you call it in a loop with a 1 s delay, the true time between checks will actually be 1.05 s. Using the scheduler allows drift-free checking; however, you should make sure that the check() call always returns in a time shorter than your chosen period!\n",
+    "\n",
+    "If you pass a filename to the \"filename\" keyword argument, sampled data will be written to disk in CSV format.\n",
+    "\n",
+    "### Influx/Grafana integration\n",
+    "By passing a measurement name to the \"measurement\" keyword of the Monitor class, the Monitor will send all sampled data to the corresponding measurement in an Influx database. This feature requires that Influx is installed and running at the address and port specified in config.yml.\n",
+    "\n",
+    "Vigilant can also autogenerate Grafana dashboards displaying the monitored variables. To activate this, make sure that Grafana is installed and running on the corresponding address and port in config.yml, then pass a name to the \"dashboard\" keyword argument of the Monitor class. Each time a Monitor is added to the watch list, it will be added if it doesn't already exist in the dashboard."
    ]
   },
   {
@@ -62,7 +69,23 @@
    "source": [
     "def read_current():\n",
     "    return np.random.normal(0.1, 0.01)\n",
-    "m.watch(read_current, name='current')"
+    "m.watch(read_current, name='read_current', category='test')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since we passed a category to this variable, it will appear in the Monitor.data DataFrame in the column \"laser/read_current\", whereas the first was stored in the default category as \"default/read_voltage\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.data"
    ]
   },
   {
@@ -206,7 +229,7 @@
    "metadata": {},
    "source": [
     "# Extensions\n",
-    "By default, Vigilant runs in a very lightweight mode which only acquires data and stores it internally. More sophisticated behavior can be added by registering an extension class using the ``Monitor.add_extension()`` method. As well as the supported classes, you can create custom extensions - the only requirement is that they have an ``update(data)`` method which takes a pandas DataFrame and processes it however you'd like."
+    "By default, Vigilant runs in a very lightweight mode which only acquires data and stores it internally. More sophisticated behavior can be added by registering an extension class using the ``Monitor.add_extension()`` method. The InfluxClient and FileLogger extensions can be enabled by passing \"measurement\" or \"filename\" keyword arguments to the Monitor class. As well as the supported classes, you can create custom extensions - the only requirement is that they have an ``update(data)`` method which takes a pandas DataFrame and processes it however you'd like."
    ]
   },
   {
@@ -250,43 +273,6 @@
    "metadata": {},
    "source": [
     "This can be used to broadcast data to other processes for analysis."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TICK database\n",
-    "For long-term monitoring with large datasets, the pandas + ZeroMQ stack can be replaced with an InfluxDB database. The InfluxClient class can be used for this purpose:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from vigilant.extensions import InfluxClient\n",
-    "m.add_extension(InfluxClient(database='vigilant', measurement='test3'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The same client class can be used to retrieve data from other scripts:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from vigilant.extensions import InfluxClient\n",
-    "\n",
-    "other_client = InfluxClient(database='vigilant', measurement='test3')\n",
-    "other_client.read()"
    ]
   }
  ],
