Add Kapacitor task generator for threshold comparison

--- a/vigilant/Telegraf + Kapacitor.ipynb
+++ b/vigilant/Telegraf + Kapacitor.ipynb
@@ -6,8 +6,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import logging\n",
+    "log = logging.getLogger('werkzeug')\n",
+    "log.setLevel(logging.ERROR)\n",
+    "\n",
+    "from vigilant.http_monitor import Monitor\n",
+    "from vigilant import config\n",
+    "import numpy as np\n",
+    "def read_voltage():\n",
+    "    return np.random.normal(1, 0.05)\n",
+    "\n",
+    "def read_current():\n",
+    "    return np.random.normal(2, 0.05)\n",
+    "\n",
+    "m = Monitor()\n",
+    "m.watch(read_voltage, bounds=[0.9, 1.0])\n",
+    "m.watch(read_current, bounds=[1.9, 2.0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from vigilant.extensions import InfluxClient\n",
-    "client = InfluxClient('', 'telegraf')"
+    "client = InfluxClient(config['influx']['measurement'])"
    ]
   },
   {
@@ -16,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.query('SHOW MEASUREMENTS ON telegraf')"
+    "client.query(f\"SELECT * FROM {database}..alerts  ORDER BY time DESC LIMIT 50\")"
    ]
   },
   {
@@ -25,8 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = client.query('SELECT * FROM telegraf..test')\n",
-    "res['results']"
+    "client.post('DROP DATABASE vigilant')"
    ]
   },
   {
@@ -35,73 +58,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.post('DROP DATABASE telegraf')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import textwrap, requests, json\n",
-    "def compare(measurement, field, database, rp='autogen'):\n",
-    "    # create and run a task comparing the passed field against its max value\n",
-    "    task_id = field.replace('/', '-')\n",
-    "    script = textwrap.dedent(f\"\"\"\n",
-    "        stream\n",
-    "            |from()\n",
-    "                .measurement('test')\n",
-    "            |log()\n",
-    "            |alert()\n",
-    "                .crit(lambda: \"{field}\" >  \"{field}:max\")\n",
-    "                .message('out of range')\n",
-    "                .details('')\n",
-    "                .log('/tmp/alerts.txt')\n",
-    "    \"\"\")\n",
-    "    task = {\n",
-    "        \"id\" : task_id,\n",
-    "        \"type\" : \"stream\",\n",
-    "        \"dbrps\": [{\"db\": database, \"rp\" : rp}],\n",
-    "        \"script\": script,\n",
-    "        \"status\": \"enabled\"\n",
-    "    }\n",
-    "    requests.delete(f'http://localhost:9092/kapacitor/v1/tasks/{task_id}')\n",
+    "from vigilant.tick.tasks import process_alerts, submit_task\n",
     "\n",
-    "    r = requests.post('http://localhost:9092/kapacitor/v1/tasks', data=json.dumps(task))\n",
-    "    return r\n",
+    "fields = ['default/read_voltage', 'default/read_current']\n",
+    "script = process_alerts(fields)\n",
+    "print(script)\n",
     "\n",
-    "compare('test', 'default/read_voltage', 'telegraf').text\n",
-    "    \n",
-    "    \n",
-    "    \n"
+    "submit_task('comparator', script)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "json.dumps(task)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ['KAPACITOR_DATA_DIR'] = \"/Users/robbiefasano/.kapacitor\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -120,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.6"
   },
   "toc": {
    "base_numbering": 1,
